BusOne02/src/objects/BOT_Plan_Product__c.object
<CustomObject>
    <description>(BOT) It is created by BusinessOne Technologies Inc. It is used to store the Plan product information and having a lookup relationship with Account.</description>
    <fields>
        <fullName>BOT_Account__c</fullName>
        <description>Lookup relationship to Account</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plan Products</relationshipLabel>
        <relationshipName>Plan_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BOT_Channel__c</fullName>
        <description>Used to store the selection channel</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Tricare</fullName>
                </value>
                <value>
                    <fullName>PBM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOT_Entity_ID__c</fullName>
        <description>To store the BOT Entity Id. It is used for BOT internal reference.</description>
        <label>Entity ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Type_Used__c</fullName>
        <description>Used to store the Formulary type used for this product</description>
        <label>Formulary Type Used</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Medical_Admin_ID__c</fullName>
        <description>To store the BOT medical admin ID(Entity ID). It is used for BOT internal reference only.</description>
        <label>Medical Admin ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Medical_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to Account. This field represents the medical administrator.</description>
        <label>Medical Admin</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plan Products (Medical Admin)</relationshipLabel>
        <relationshipName>Medical_Admin</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Product_ID__c</fullName>
        <description>To store BOT Product ID. This field is used as external ID</description>
        <externalId>true</externalId>
        <label>Product ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BOT_Product_Lives_Rx__c</fullName>
        <description>Used to store the Rx lives covered by this product.</description>
        <label>Product Lives Rx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Product_Lives__c</fullName>
        <description>Used to store the total lives covered by this product.</description>
        <label>Product Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Product_Name__c</fullName>
        <description>Used to store the Name of the product</description>
        <label>Product Name Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Product_Type_ID__c</fullName>
        <description>Used to store BOT product type ID</description>
        <label>Product Type ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Product_Type__c</fullName>
        <description>Used to store the product type</description>
        <label>Product Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Plan Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>